--- a/css/default.css
+++ b/css/default.css
@@ -6,10 +6,6 @@ body {
     background-color: black;
 }
 
-p {
-    padding: 20px 100px;
-}
-
 section.hero {
     position: relative;
     background: url('../images/view-from-office.png') center/cover no-repeat; /* Replace with your image path */
@@ -18,8 +14,13 @@ section.hero {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 640px;
-    font-size: 18px;;
+    font-size: 18px;
+    height:100vh;
+}
+
+.hero p a {
+    color: #fff;
+    text-decoration: none;
 }
 
 .hero h1 {
@@ -28,71 +29,4 @@ section.hero {
     font-weight: bold;
     margin: 0;
     padding: 0;
-}
-
-.contact {
-    background-color: #f4f4f4;
-    margin: 50px;
-}
-
-.contact {
-    text-align: center;
-    background-color: #f4f4f4;
-}
-
-.contact ul {
-    list-style-type: none;
-    text-align: center; 
-    padding: 0;
-    margin: 0;
-}
-
-.contact ul li {
-    display: inline-block;
-    padding: 20px 20px 20px 20px;
-}
-
-form {
-    padding: 20px;
-    margin: 25px 100px;
-    background-color: #ddd;
-    border-radius: 8px;
-}
-
-label {
-    display: block;
-    margin-bottom: 8px;
-}
-
-input, textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 0.75rem;
-}
-
-button {
-    background-color: #666;
-    color: #fff;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 0.75rem;
-}
-
-button:hover {
-    background-color: #45a049;
-}
-
-#confirmation {
-    display: none;
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #4caf50;
-    color: #fff;
-    border-radius: 4px;
 }
