--- a/app/src/css/default.css
+++ b/app/src/css/default.css
@@ -1,32 +1,32 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    font-size: 0.75rem;
-    background-color: black;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  font-size: 0.75rem;
+  background-color: black;
 }
 
-section.hero {
-    position: relative;
-    background: url('../images/view-from-office.jpg') center/cover no-repeat; /* Replace with your image path */
-    color: #fff;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 18px;
-    height:100vh;
+div.home-screen-container {
+  position: relative;
+  background: url('../images/view-from-office.jpg') center/cover no-repeat; /* Replace with your image path */
+  color: #fff;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 18px;
+  height: 100vh;
 }
 
-.hero p a {
-    color: #fff;
-    text-decoration: none;
+.home-screen-container p a {
+  color: #fff;
+  text-decoration: none;
 }
 
-.hero h1 {
-    font-family: 'Poiret One', sans-serif;
-    font-size: 64px;
-    font-weight: bold;
-    margin: 0;
-    padding: 0;
+.home-screen-container h1 {
+  font-family: 'Poiret One', sans-serif;
+  font-size: 64px;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
 }
